# cmake_example

./: CMakeLists.txt  README.md
dependency/: CMakeLists.txt  my_library2.cpp  my_library2.h
project/: CMakeLists.txt  main.cpp  my_library.cpp  my_library.h
